--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div class="container" id="container"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
